fix(review): address SonarCloud code smells in PR labeller (S107, S3776, S135)
Remove the dead non-streaming PrReviewer.review() method (never called) and
fold the availableLabels template slot into the existing repoInstructions slot
via a new combineSections() helper in the orchestrator, dropping PrReviewer
from 8 parameters to 7 (S107). Extract canonicalNames() and resolveSuggestion()
private helpers from PrLabeler.reconcile() to reduce cognitive complexity and
eliminate multiple continue statements (S3776/S135). Rename formatAvailableLabels
to buildLabelGuidance, adding a full section header.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>